Try fix svg animate on mobile

--- a/src/app/components/loader-ponthe/loader-ponthe.component.scss
+++ b/src/app/components/loader-ponthe/loader-ponthe.component.scss
@@ -12,6 +12,7 @@ svg {
     margin: auto;
     max-height: 30vh;
     max-width: 40vw;
+    height: 100vh;
 
     @include sm {
         max-height: 40vh;
